change to overflow-clip

--- a/core/templates/core/real_estate.html
+++ b/core/templates/core/real_estate.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block content %}
-<main class="flex flex-col gap-20 overflow-x-hidden">
+<main class="flex flex-col gap-20 overflow-x-clip">
     <section class="hero responsive-padding bg-blue-800 flex flex-col justify-center gap-6 lg:gap-9 py-3 lg:py-20 lg:px-60">
         <h1 class="text-white text-5xl lg:text-6xl text-center font-extrabold">Want a Property? Get One!</h1>
         <div>
