--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -31,16 +31,16 @@
         
             <div class="image-container w-max whitespace-nowrap flex items-start gap-6 animate-scroll *:w-60 *:h-60 *:object-cover *:rounded-lg">
                 
-                <img src="{% static 'images/paris-eiffel-tower.jpg' %}" class="w-60 h-60 object-cover rounded-lg">
-                <img src="{% static 'images/toronto-image.jpg' %}" class="w-60 h-60 object-cover rounded-lg">
-                <img src="{% static 'images/paris-eiffel-tower.jpg' %}" class="w-60 h-60 object-cover rounded-lg">
-                <img src="{% static 'images/toronto-image.jpg' %}" class="w-60 h-60 object-cover rounded-lg">
-                <img src="{% static 'images/paris-eiffel-tower.jpg' %}" class="w-60 h-60 object-cover rounded-lg">
-                <img src="{% static 'images/toronto-image.jpg' %}" class="w-60 h-60 object-cover rounded-lg">
-                <img src="{% static 'images/paris-eiffel-tower.jpg' %}" class="w-60 h-60 object-cover rounded-lg">
-                <img src="{% static 'images/toronto-image.jpg' %}" class="w-60 h-60 object-cover rounded-lg">
-                <img src="{% static 'images/paris-eiffel-tower.jpg' %}" class="w-60 h-60 object-cover rounded-lg">
-                <img src="{% static 'images/toronto-image.jpg' %}" class="w-60 h-60 object-cover rounded-lg">
+                <img src="{% static 'images/paris-eiffel-tower.jpg' %}" width="320" class="w-60 h-60 object-cover rounded-lg">
+                <img src="{% static 'images/toronto-image-compressed.jpg' %}" width="320" class="w-60 h-60 object-cover rounded-lg">
+                <img src="{% static 'images/paris-eiffel-tower.jpg' %}" width="320" class="w-60 h-60 object-cover rounded-lg">
+                <img src="{% static 'images/toronto-image-compressed.jpg' %}" width="320" class="w-60 h-60 object-cover rounded-lg">
+                <img src="{% static 'images/paris-eiffel-tower.jpg' %}" width="320" class="w-60 h-60 object-cover rounded-lg">
+                <img src="{% static 'images/toronto-image-compressed.jpg' %}" width="320" class="w-60 h-60 object-cover rounded-lg">
+                <img src="{% static 'images/paris-eiffel-tower.jpg' %}" width="320" class="w-60 h-60 object-cover rounded-lg">
+                <img src="{% static 'images/toronto-image-compressed.jpg' %}" width="320" class="w-60 h-60 object-cover rounded-lg">
+                <img src="{% static 'images/paris-eiffel-tower.jpg' %}" width="320" class="w-60 h-60 object-cover rounded-lg">
+                <img src="{% static 'images/toronto-image-compressed.jpg' %}" width="320" class="w-60 h-60 object-cover rounded-lg">
         
             </div>
         </div>
@@ -125,7 +125,7 @@
             <h3 class="text-4xl font-semibold">Listen to our Trusted Clients <span class="text-red-600 fa fa-heart"></span></h3>
             <div class="card-container flex flex-col md:flex-row md:flex-wrap justify-center gap-6 *:bg-white *:text-gray-700 *:py-6 *:px-4 *:w-full *:md:w-72 *:rounded-xl *:shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)] *:inline-flex *:flex-col *:items-start *:gap-4 *:overflow-hidden">
                 <div class="card">
-                    <img src="{% static 'images/quote-svgrepo-com.svg' %}" width="20px" class="w-14 h-14">
+                    <img src="{% static 'images/quote-svgrepo-com.svg' %}" width="20" class="w-14 h-14">
                     <div class="body">
                         I'd always dreamed of living and working abroad. Eaglespoint's expert guidance made it possible. They helped me navigate the Permanent Residence process, ensuring a flawless application. I highly recommend Eaglespoint to anyone seeking to relocate abroad. Their professionalism and expertise are unmatched. Thank you, Eaglespoint, for making my dream a reality!
                     </div>
@@ -136,7 +136,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="{% static 'images/quote-svgrepo-com.svg' %}" width="20px" class="w-14 h-14">
+                    <img src="{% static 'images/quote-svgrepo-com.svg' %}" width="20" class="w-14 h-14">
                     <div class="body">
                         I'm forever grateful to Eaglespoint Horizon Limited for guiding me through my international education journey. From securing admission to studying abroad, graduating, and now working as a lecturer, Eaglespoint has been an invaluable partner. Their competence, efficiency, and dedication to customer satisfaction are unparalleled. I highly recommend Eaglespoint to anyone seeking to study abroad or relocate internationally. They truly helped me achieve my dreams!
                     </div>
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="{% static 'images/quote-svgrepo-com.svg' %}" width="20px" class="w-14 h-14">
+                    <img src="{% static 'images/quote-svgrepo-com.svg' %}" width="20" class="w-14 h-14">
                     <div class="body">
                         I'm forever grateful to Eaglespoint for making my study abroad dreams a reality! Their guidance and support throughout the application and visa process were invaluable. I'm now proudly holding a degree from a prestigious international university, and I couldn't have done it without Eaglespoint's expertise. Thank you for helping me soar to new heights!
                     </div>
