--- a/core/templates/core/real_estate.html
+++ b/core/templates/core/real_estate.html
@@ -49,7 +49,7 @@
                     {% for result in listings %}
                         {% component "listing_card" 
                             title=result.title 
-                            href="/listing/property/{{ result.id }}/" 
+                            href="{% url 'core:property_details_by_id' result.id %}" 
                             price=result.price 
                             size=result.size 
                             type=result.listing_type 
