--- a/components/misc/stats-partner.html
+++ b/components/misc/stats-partner.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <section class="responsive-padding flex flex-col lg:flex-row gap-12 md:justify-between w-[99%]" data-aos="fade-up">
-    <dl class="stats flex justify-start gap-10 items-center font-medium">
+    <dl class="stats flex justify-start gap-10 items-start font-medium">
         <div class="flex flex-col gap-4 items-center">
             <dt class="text-6xl font-black">200+</dt>
             <dd class="text-gray-700">Satisfied customers</dd>
